@@ -1,3 +1,9 @@
+2002-08-27  Nicolas Burrus  <nes@lrde.epita.fr>
+
+	* src/options.c: Include config.h.
+	* src/linux/tun.c, src/openbsd/tun.c, src/freebsd/tun.c: Likewise.
+	* configure.ac: Ask config.h.
+
 2002-08-26  Nicolas Burrus  <nes@lrde.epita.fr>
 
 	* src/linux/tun.c: Remove warning.
